--- a/src/main/resources/com/example/demo/menu.view.fxml
+++ b/src/main/resources/com/example/demo/menu.view.fxml
@@ -5,7 +5,8 @@
 
 <AnchorPane prefHeight="300.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/17.0.12" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.demo.MenuController">
 
-      <Label layoutX="101.0" layoutY="132.0" text="Cadastro Usuário" />
+      <Label fx:id="menssagemText" layoutX="101.0" layoutY="132.0" text="Cadastro Usuário" />
    <Button layoutX="234.0" layoutY="255.0" mnemonicParsing="false" onAction="#onExitButtonClick" text="Sair" />
+   <Button layoutX="121.0" layoutY="170.0" mnemonicParsing="false" onAction="#onMenuButtonClick" text="Cadastro" />
 
 </AnchorPane>
